@@ -2,6 +2,9 @@
 
 Pull requests are welcome.
 Please do not hesitate to add yourselfs to CREDITS file!
+Please do not forget to update the ChangeLog!
+Please do not forget to add a licence header to each new file as well
+as add yourself to the authors list of the files you have modified.
 If you are looking for ideas check the TODO file.
 Automated (unit) tests would be a real cool feature.
 
@@ -13,7 +16,7 @@ If you do it to your fork, a centralized build will start and your changes will 
 ### Supported Qt Version
 CuteCom Version 0.3x was the first version based on Qt5. Originally it was developed using Qt 5.3.
 Reported in issue #8 there are still users relying on Qt5 in a version less then 5.3.
-Travis is currently setup to test the code against Qt version 5.4
+Travis is currently setup to test the code against Qt version 5.9
 (https://travis-ci.org/cyc1ingsir/cutecom).
 
 Please verify, that your CRs don't rely on a higher Qt version. 
