@@ -3,6 +3,7 @@
 -Windows support added
 -line termination was not saved in settings - FIX
 -upgrading to clang-format to version 3.8.0
+-updating travis ci instructions - FIX
 0.40.0, January 12, 2017
 -First implementation of searching the output
 -Linked line termination of displayed data 
